--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbz4jNYS5CmSFys4jfd_QaaBolbEGdtkaZ2_4uJGfZWREABqQSj38KTLZn6bs08hm7pKhQ/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
